edit disign application form

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <title>Hackathon poems</title>
   </head>
-  <body className="body">
+  <body class="body">
     <div id="root"></div>
   </body>
 </html>
